samples/_failures_safe/1761224812_888632_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0565c5ee.c: In function ‘main’:
./samples/SAFE/__tmp_0565c5ee.c:154:24: error: missing terminating " character
  154 |                 printf("No entries found with specified
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0565c5ee.c:154:17: error: expected expression at end of input
  154 |                 printf("No entries found with specified
      |                 ^~~~~~
./samples/SAFE/__tmp_0565c5ee.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0565c5ee.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0565c5ee.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0565c5ee.c:154:17: error: expected declaration or statement at end of input
